@@ -1,3 +1,7 @@
+1999-07-20  lav
+
+	* search.cc: fix backward search.
+
 1999-07-18  lav
 
 	* search.cc: support mmap in replace; speed up replace.
